data/derived/fa15/progs/unify/prog3370.ml.out
Characters 72-74:
  List.fold_left f base fs;;
                        ^^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
